@@ -5271,7 +5271,7 @@ _bfd_mips_elf_final_link (abfd, info)
 
 	      if (p->type != bfd_indirect_link_order)
 		{
-		  if (p->type == bfd_fill_link_order)
+		  if (p->type == bfd_data_link_order)
 		    continue;
 		  abort ();
 		}
@@ -5398,7 +5398,7 @@ _bfd_mips_elf_final_link (abfd, info)
 
 	      if (p->type != bfd_indirect_link_order)
 		{
-		  if (p->type == bfd_fill_link_order)
+		  if (p->type == bfd_data_link_order)
 		    continue;
 		  abort ();
 		}
@@ -5554,7 +5554,7 @@ _bfd_mips_elf_final_link (abfd, info)
 
 		  if (p->type != bfd_indirect_link_order)
 		    {
-		      if (p->type == bfd_fill_link_order)
+		      if (p->type == bfd_data_link_order)
 			continue;
 		      abort ();
 		    }
@@ -5634,7 +5634,7 @@ _bfd_mips_elf_final_link (abfd, info)
 
 	      if (p->type != bfd_indirect_link_order)
 		{
-		  if (p->type == bfd_fill_link_order)
+		  if (p->type == bfd_data_link_order)
 		    continue;
 		  abort ();
 		}
