@@ -4105,7 +4105,7 @@ elf64_alpha_final_link (abfd, info)
 
 	      if (p->type != bfd_indirect_link_order)
 		{
-		  if (p->type == bfd_fill_link_order)
+		  if (p->type == bfd_data_link_order)
 		    continue;
 		  abort ();
 		}
